# ferret

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
configs/tools/: search_tool_with_squeezer_config.yaml
configs/train/: grpo.yaml  ppo.yaml  ppo_b200.yaml
ferret/data/: preprocess.py
ferret/reward_score/: parallel_search.py  search_r1_format.py
recipe/expand_search/: README.md  data_preprocess_expand_search.sh  eval_ExpandSearch.sh  train_expand_search_ppo_qwen2.5-3b-instruct.sh
recipe/parallel_search/: README.md  data_preprocess_parallel_search.sh  eval_ParallelSearch.sh  train_parallel_search_ppo_qwen2.5-7b-instruct.sh  train_parallel_search_ppo_qwen3-30b-a3b-instruct.sh  train_parallel_search_ppo_qwen3-4b-instruct.sh
recipe/search-r1/: README.md  data_preprocess_search_r1.sh  eval_search-r1.sh  train_search-r1_grpo_Qwen3-30B-A3B-Instruct.sh  train_search-r1_ppo_Qwen3-30B-A3B-Instruct.sh  train_search-r1_ppo_qwen2.5-3b-instruct.sh
scout/data/: preprocess.py
scout/reward_score/: parallel_search.py  search_r1_format.py
scout/tools/: __init__.py
scout/utils/: metric_utils.py
scripts/: setup_custom_metrics.sh
scripts/data_preprocess/: data_preprocess.sh  parallel_search.sh  search_r1.sh
scripts/eval/: eval.sh  eval_ExpandSearch.sh  eval_ParallelSearch.sh  eval_search-r1.sh
scripts/retrieval/: run_retrieval_server.sh
scripts/train/: run_parallel_search_ppo_qwen2.5-7b-instruct.sh  run_parallel_search_ppo_qwen3-30b-a3b-instruct.sh  run_search-r1-verl_ppo_qwen2.5-3b-instruct.sh  run_search-r1_ppo_qwen2.5-3b-instruct.sh
(+3 files in other folders)
