[project]
name = "ferret"
version = "0.1.0"
description = "Extensible framework for training LLM agents via reinforcement learning with advanced search and tool-use capabilities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "verl",
    "torch>=2.8.0",
    "flash-attn",
    "sglang[all]>=0.5.3rc0",
    "wandb",
    "langchain-nvidia-ai-endpoints",
    "pip>=25.2",
]

[tool.uv.sources]
verl = { path = "./verl", editable = true }
torch = [
  { index = "pytorch-cu129" },
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }
